# Math

./: CMakeLists.txt  Constants.h  README.md  main.c
Algebra/: Alg.h  Algebra.c  Algebra.h  Complex.c  FracSmp.c  FracSmp.h  FunctionCalc.c  FunctionCalc.h  ImaginaryMath.c  ImaginaryMath.h  PolynomialFctrng.c  PolynomialFctrng.h  Quadractics.c  Quadractics.h  RootsUnity.c  SlvSys.c  SlvSys.h  SmpSqrt.c  SmpSqrt.h  USynthDiv.c  USynthDiv.h  func.c
Analytical Geometry/: Graphing.c  Graphing.h  Length.c  Length.h  Midpoint.c  Midpoint.h  PointLineDistance.c  PointLineDistance.h  PointsLine.c  PointsLine.h  RotatePoint.c  RotatePoint.h  Slope.c  Slope.h  SlopePointLine.c  SlopePointLine.h
Analytical_Geometry/: AnaGeo.h  Length.c  Midpoint.c  PointLineDistance.c  PointsLine.c  PrintPnt.c  RotatePoint.c  Slope.c  SlopePointLine.c
Counting/: BinomialCoefs.c  Cnt.h  Combinations.c  Combinations.h  Counting.c  Counting.h  NthFibNum.c  NthFibNum.h  Permutations.c  Permutations.h
Geometry/: Geo.h  Geometry.c  Geometry.h  Incenter.c  Incenter.h  PolygonAngles.c  PolygonAngles.h  PolygonArea.c  PolygonArea.h  PythagoreanInequality.c  PythagoreanInequality.h  PythagoreanTheorem.c  PythagoreanTheorem.h  TrapezoidArea.c  TrapezoidArea.h  TriangleArea.c  TriangleArea.h
Global_Funcs/: Factorial.c  Factorial.h  FloatMath.c  FloatMath.h  Frac.h  FracSmp.c  GCF.c  GCF.h  Power.c  Power.h  Sieve.c  Sieve.h  func.c  func.h  power.c  power.h  spsqrt.c  spsqrt.h  sscanf.c  sscanf.h
Misc/: GradeCalc.c  GradeCalc.h  Misc.c  Misc.h
Number Theory/: Dvsrs.c  Dvsrs.h  Fctrs.c  Fctrs.h  LCM.c  LCM.h  Modulo.c  Modulo.h  NumThry.c  NumThry.h  Primes.c  Primes.h  UGCF.c  UGCF.h
Number_Theory/: Dvsrs.c  GCF.c  LCM.c  Modulo.c  Num.h  Sieve.c
Stereometry/: LateralPyramidArea.c  LateralPyramidArea.h  RectangularPrism.c  RectangularPrism.h  RightCone.c  RightCone.h  RightCylinder.c  RightCylinder.h  RightSquarePyramid.c  RightSquarePyramid.h  Stereometry.c  Stereometry.h  Strometry.h
Testing/: Test.c  Test.h
User/: Algebra.c  Counting.c  Geometry.c  Graphing.c  NumThry.c  Stereometry.c  User.h
